k8s/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}  # Se inyectará dinámicamente
