k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: ${NAMESPACE}  # 🔹 Namespace dinámico
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app
          image: ${IMAGE}  # 🔹 Imagen dinámica
          ports:
            - containerPort: 80
